add Novartis user 4

--- a/oncoFinder2/templates/report/just_text.html
+++ b/oncoFinder2/templates/report/just_text.html
@@ -512,8 +512,8 @@ $(function() {
 		"paging":   true,
         "iDisplayLength": 20,
         "buttons": [
-            {extend: 'csv', title: file_name},
-            {extend: 'print', title: file_name}
+            {extend: 'csv', title: 'nova_prj1_biochem'},
+            {extend: 'print', title: 'nova_prj1_biochem'}
             
        ],
 	});
