change adj.p-val to p-val in nova reports

--- a/oncoFinder2/templates/report/report_detail_abovebeyond.html
+++ b/oncoFinder2/templates/report/report_detail_abovebeyond.html
@@ -479,7 +479,10 @@
            <th>Cell line</th>
            <!--  <th>Condition</th>-->
            <th>p-val</th>
+           {%if 'nova' in report.slug %}<th>p-value</th>
+           {%else%}
            <th>adj. p-val</th>
+           {%endif%}
            <th>Effect</th>
           </tr>
         </thead>  
