updater inswx report 8

--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -450,22 +450,20 @@
 <div id='hide_bio' style='display:none;'>
 <center>
 <img src='/media/report-portal/inswx-report/ap1-dna.png' style='width:70%; margin: 0 auto' />
-<h4>INSWX219_A549</h4>
+<h4>INSWX219 in complex with AP-1 protein.</h4>
 <hr/>
 <img src='/media/report-portal/inswx-report/ap1-inter.png' style='width:70%; margin: 0 auto'/>
-<h4>INSWX219</h4>
+<h4>INSWX219 inside the binding site of AP-1: main interactions are shown.</h4>
 <hr/>
 <img src='/media/report-portal/inswx-report/ap1-surf.png' style='width:70%; margin: 0 auto'/>
-<h4>Metformin_A549</h4>
+<h4> AP-1 in complex with INSWX219: AP-1 is represented as hydrophobic surface: blue color is hydrophilic area, orange color is hydrophobic area.</h4>
 <hr/>
-<img src='/media/report-portal/inswx-report/nfkb.png' style='width:70%; margin: 0 auto'/>
-<h4>NAFLD</h4>
-<hr/>
+
 <img src='/media/report-portal/inswx-report/pde4b.png' style='width:70%; margin: 0 auto'/>
-<h4>Senescence_adipocytes</h4>
+<h4>PDE4B in complex with  INSWX219</h4>
 <hr/>
 <img src='/media/report-portal/inswx-report/pkc_alpha.png'style='width:70%; margin: 0 auto' />
-<h4>Senescence_liver</h4>
+<h4>PKC alpha in complex with INSWX219</h4>
 </center>
 </div>
 
