--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -472,8 +472,10 @@
 <h4>ACC2 in complex with INSWX235</h4>
 <hr/>
 
-<img src='/media/report-portal/inswx-report/pkc_alpha.png'style='width:70%; margin: 0 auto' />
-<h4>INSWX235 inside the binding pocket: main interactions are shown</h4>
+<img src='/media/report-portal/inswx-report/pic8.png'style='width:70%; margin: 0 auto' />
+<h4>ACC2 in complex with INSWX235: AP-1 is represented as hydrophobic surface: blue color is hydrophilic area, orange color is hydrophobic area.</h4>
+
+
 
 </center>
 </div>
