updater inswx report 912

--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -107,6 +107,12 @@
 </center>
 {%endif%}
 
+
+<center>
+<img src='/media/report-portal/inswx-report/schema.png' style='width:70%; margin: 0 auto' /> <br/>
+<h4>INSWX compound family general action mechanism</h4>
+</center>
+
 <!-------------------------------------  GENE level  -->          
           <hr/>
           <h2 id='gene_analysis'>Gene level analysis</h2>
@@ -342,7 +348,10 @@
      {%else%}
      <div role="tabpanel" class="tab-pane fade " id="{{group.get_slug}}_tftrrust_tab">
      {%endif%}
-             
+             <center>
+<img src='/media/report-portal/inswx-report/schema.png' style='width:70%; margin: 0 auto' /> <br/>
+<h4>INSWX compound family general action mechanism</h4>
+</center>
        <h4>Table <span class='tbl_num'></span>Transcription Factor Analysis (TRRUST database) for {{group.name}} </h4>
        <table id="tbl-tftrrust-{{group.get_slug}}" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
