updater inswx report 9111

--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -1653,6 +1653,306 @@
 <td  >2</td>
 <td  >4.65</td>
 </tr>
+<tr>
+<td  >INSWX239</td>
+<td  >-8,2</td>
+<td  >397.45</td>
+<td  >28</td>
+<td  >17</td>
+<td  >0.26</td>
+<td  >2</td>
+<td  >6</td>
+<td  >3</td>
+<td  >110.28</td>
+<td  >138.46</td>
+<td  >2.53</td>
+<td  >2.45</td>
+<td  >1.88</td>
+<td  >1.38</td>
+<td  >2.25</td>
+<td  >2.1</td>
+<td  >-4.16</td>
+<td  >0.0272</td>
+<td  >0.0000684</td>
+<td  >Moderately soluble</td>
+<td  >-5</td>
+<td  >0.00396</td>
+<td  >0.00000997</td>
+<td  >Moderately soluble</td>
+<td  >-5.29</td>
+<td  >0.00206</td>
+<td  >0.00000518</td>
+<td  >Moderately soluble</td>
+<td  >High</td>
+<td  >No</td>
+<td  >Yes</td>
+<td  >Yes</td>
+<td  >No</td>
+<td  >No</td>
+<td  >No</td>
+<td  >Yes</td>
+<td  >-6.98</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0</td>
+<td  >1</td>
+<td  >0</td>
+<td  >0.55</td>
+<td  >1</td>
+<td  >1</td>
+<td  >1</td>
+<td  >4.07</td>
+</tr>
+<tr>
+<td  >INSWX240</td>
+<td  >-8,9</td>
+<td  >414.85</td>
+<td  >29</td>
+<td  >15</td>
+<td  >0.32</td>
+<td  >6</td>
+<td  >6</td>
+<td  >1</td>
+<td  >115.19</td>
+<td  >108.87</td>
+<td  >2.24</td>
+<td  >2.69</td>
+<td  >2.58</td>
+<td  >2.62</td>
+<td  >-0.02</td>
+<td  >2.02</td>
+<td  >-4.09</td>
+<td  >0.0334</td>
+<td  >0.0000806</td>
+<td  >Moderately soluble</td>
+<td  >-4.63</td>
+<td  >0.00975</td>
+<td  >0.0000235</td>
+<td  >Moderately soluble</td>
+<td  >-5.03</td>
+<td  >0.00384</td>
+<td  >0.00000925</td>
+<td  >Moderately soluble</td>
+<td  >High</td>
+<td  >No</td>
+<td  >Yes</td>
+<td  >No</td>
+<td  >Yes</td>
+<td  >Yes</td>
+<td  >No</td>
+<td  >Yes</td>
+<td  >-6.92</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0.55</td>
+<td  >0</td>
+<td  >2</td>
+<td  >1</td>
+<td  >3.45</td>
+</tr>
+<tr>
+<td  >INSWX241</td>
+<td  >-8,6</td>
+<td  >459.3</td>
+<td  >29</td>
+<td  >15</td>
+<td  >0.32</td>
+<td  >6</td>
+<td  >6</td>
+<td  >1</td>
+<td  >117.88</td>
+<td  >108.87</td>
+<td  >2.16</td>
+<td  >2.75</td>
+<td  >2.69</td>
+<td  >2.73</td>
+<td  >0.01</td>
+<td  >2.07</td>
+<td  >-4.41</td>
+<td  >0.018</td>
+<td  >0.0000392</td>
+<td  >Moderately soluble</td>
+<td  >-4.69</td>
+<td  >0.00935</td>
+<td  >0.0000204</td>
+<td  >Moderately soluble</td>
+<td  >-5.23</td>
+<td  >0.00272</td>
+<td  >0.00000593</td>
+<td  >Moderately soluble</td>
+<td  >High</td>
+<td  >No</td>
+<td  >Yes</td>
+<td  >No</td>
+<td  >Yes</td>
+<td  >Yes</td>
+<td  >No</td>
+<td  >Yes</td>
+<td  >-7.15</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0.55</td>
+<td  >0</td>
+<td  >2</td>
+<td  >1</td>
+<td  >3.5</td>
+</tr>
+<tr>
+<td  >INSWX242</td>
+<td  >-6,3</td>
+<td  >278.33</td>
+<td  >19</td>
+<td  >10</td>
+<td  >0.31</td>
+<td  >5</td>
+<td  >4</td>
+<td  >1</td>
+<td  >77.87</td>
+<td  >104.24</td>
+<td  >1.89</td>
+<td  >2.55</td>
+<td  >2.86</td>
+<td  >0.98</td>
+<td  >1.09</td>
+<td  >1.87</td>
+<td  >-3.23</td>
+<td  >0.163</td>
+<td  >0.000587</td>
+<td  >Soluble</td>
+<td  >-4.39</td>
+<td  >0.0114</td>
+<td  >0.0000411</td>
+<td  >Moderately soluble</td>
+<td  >-3.86</td>
+<td  >0.0384</td>
+<td  >0.000138</td>
+<td  >Soluble</td>
+<td  >High</td>
+<td  >No</td>
+<td  >No</td>
+<td  >Yes</td>
+<td  >Yes</td>
+<td  >No</td>
+<td  >No</td>
+<td  >No</td>
+<td  >-6.19</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0.55</td>
+<td  >0</td>
+<td  >2</td>
+<td  >0</td>
+<td  >3.12</td>
+</tr>
+<tr>
+<td  >INSWX243</td>
+<td  >-7,3</td>
+<td  >349.27</td>
+<td  >24</td>
+<td  >5</td>
+<td  >0.58</td>
+<td  >5</td>
+<td  >9</td>
+<td  >1</td>
+<td  >84.22</td>
+<td  >116.54</td>
+<td  >1.54</td>
+<td  >1.58</td>
+<td  >2.02</td>
+<td  >0.99</td>
+<td  >-0.57</td>
+<td  >1.11</td>
+<td  >-2.83</td>
+<td  >0.523</td>
+<td  >0.0015</td>
+<td  >Soluble</td>
+<td  >-3.64</td>
+<td  >0.0804</td>
+<td  >0.00023</td>
+<td  >Soluble</td>
+<td  >-1.41</td>
+<td  >13.6</td>
+<td  >0.0389</td>
+<td  >Soluble</td>
+<td  >High</td>
+<td  >No</td>
+<td  >No</td>
+<td  >No</td>
+<td  >No</td>
+<td  >No</td>
+<td  >No</td>
+<td  >No</td>
+<td  >-7.31</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0.55</td>
+<td  >0</td>
+<td  >2</td>
+<td  >0</td>
+<td  >4.17</td>
+</tr>
+<tr>
+<td  >INSWX219</td>
+<td  >-8,9</td>
+<td  >470.6</td>
+<td  >34</td>
+<td  >0</td>
+<td  >0.79</td>
+<td  >3</td>
+<td  >6</td>
+<td  >2</td>
+<td  >127.49</td>
+<td  >96.36</td>
+<td  >2.8</td>
+<td  >3.83</td>
+<td  >3.35</td>
+<td  >2.75</td>
+<td  >3.93</td>
+<td  >3.33</td>
+<td  >-4.97</td>
+<td  >0.00501</td>
+<td  >0.0000107</td>
+<td  >Moderately soluble</td>
+<td  >-5.55</td>
+<td  >0.00133</td>
+<td  >0.00000282</td>
+<td  >Moderately soluble</td>
+<td  >-3.79</td>
+<td  >0.0754</td>
+<td  >0.00016</td>
+<td  >Soluble</td>
+<td  >High</td>
+<td  >No</td>
+<td  >Yes</td>
+<td  >No</td>
+<td  >No</td>
+<td  >No</td>
+<td  >No</td>
+<td  >No</td>
+<td  >-6.45</td>
+<td  >0</td>
+<td  >1</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0</td>
+<td  >0.55</td>
+<td  >0</td>
+<td  >1</td>
+<td  >2</td>
+<td  >6.83</td>
+</tr>
 </tbody>
 </table>
 
