--- a/oncoFinder2/templates/report/report_detail_abovebeyond.html
+++ b/oncoFinder2/templates/report/report_detail_abovebeyond.html
@@ -798,8 +798,8 @@ var top_featur = $("#tbl-top_featur").DataTable( {
 var tbl_featurfilter_tab = $("#tbl_featurfilter_tab").DataTable( {
 	"paging":   true,
     "iDisplayLength": 20,
-    "ordering": false,
-    //"order": [[ 1, "desc" ]],
+    "ordering": true,
+    "order": [[ 1, "desc" ]],
     "info":     false,
     "dom": 'Bfrtip',
     "scrollX": false,
