add tables to l1k project 5

--- a/oncoFinder2/templates/report/report_detail_abovebeyond.html
+++ b/oncoFinder2/templates/report/report_detail_abovebeyond.html
@@ -847,7 +847,7 @@ var top_featur_ino = $("#tbl-top_inotrope").DataTable( {
 	"paging":   true,
     "iDisplayLength": 20,
     "ordering": true,
-    "order": [[ 1, "asc" ]],
+    "order": [[ 1, "desc" ]],
     "info":     false,
     "dom": 'Bfrtip',
     "scrollX": false,
