--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -1073,6 +1073,8 @@ $(function() {
 
 <div id='hide_adme' style='display:none;' class="tab-pane fade in active ">
 
+<div style='overflow-x: auto;'>
+
 <table id='tbl_adme' class="table table-striped table-bordered" cellspacing="0" >
 
 <thead><tr class="tableizer-firstrow"><th>INSWX #</th><th>Vendors</th><th>Canonical SMILES</th><th>Molecular weight</th><th>#Heavy atoms</th><th>#Aromatic heavy atoms</th><th>Fraction Csp3</th><th>#Rotatable bonds</th><th>#H-bond acceptors</th><th>#H-bond donors</th><th>Molar Refractivity</th><th>TPSA</th><th>iLOGP</th><th>XLOGP3</th><th>WLOGP</th><th>MLOGP</th><th>Silicos-IT Log P</th><th>Consensus Log P</th><th>ESOL Log S</th><th>ESOL Solubility (mg/ml)</th><th>ESOL Solubility (mol/l)</th><th>ESOL Class</th><th>Ali Log S</th><th>Ali Solubility (mg/ml)</th><th>Ali Solubility (mol/l)</th><th>Ali Class</th><th>Silicos-IT LogSw</th><th>Silicos-IT Solubility (mg/ml)</th><th>Silicos-IT Solubility (mol/l)</th><th>Silicos-IT class</th><th>GI absorption</th><th>BBB permeant</th><th>Pgp substrate</th><th>CYP1A2 inhibitor</th><th>CYP2C19 inhibitor</th><th>CYP2C9 inhibitor</th><th>CYP2D6 inhibitor</th><th>CYP3A4 inhibitor</th><th>log Kp (cm/s)</th><th>Lipinski #violations</th><th>Ghose #violations</th><th>Veber #violations</th><th>Egan #violations</th><th>Muegge #violations</th><th>Bioavailability Score</th><th>PAINS #alerts</th><th>Brenk #alerts</th><th>Leadlikeness #violations</th><th>Synthetic Accessibility</th></tr></thead>
@@ -1155,7 +1157,7 @@ $(function() {
  <tr><td>INSWX289</td><td>MolPort-003-933-119 CHEMBL549300 PubChem-19212 PubChem-66608294 PubChem-69743585 PubChem-70115294 PubChem-87581732 PubChem-87828554 ZINC04228274</td><td>O[C@H]([C@@H]([C@@H]1CC[C@@]2([C@]1(C)CC[C@H]1C2=CC(=O)[C@H]2[C@]1(C)C[C@@H](O)[C@@H](C2)O)O)C)CCC(O)(C)C</td><td>464.63</td><td>33</td><td>0</td><td>0.89</td><td>5</td><td>6</td><td>5</td><td>128.54</td><td>118.22</td><td>3.18</td><td>1.69</td><td>2.74</td><td>1.93</td><td>3.19</td><td>2.54</td><td>-3.46</td><td>1.63E-01</td><td>3.50E-04</td><td>Soluble</td><td>-3.79</td><td>7.58E-02</td><td>1.63E-04</td><td>Soluble</td><td>-2.92</td><td>5.52E-01</td><td>1.19E-03</td><td>Soluble</td><td>High</td><td>No</td><td>Yes</td><td>No</td><td>No</td><td>No</td><td>No</td><td>No</td><td>-7.93</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0.55</td><td>0</td><td>0</td><td>1</td><td>6.32</td></tr>
 </tbody></table>
 
-
+</div>
 
 </div>
 
@@ -1756,8 +1758,10 @@ $("#btn_show_adme").click(function(){
         "ordering": true,
         
         "info":     false,
+        "autoWidth": false,
+        "scrollX": false,
         "dom": 'Bfrtip',
-        "scrollX": true,
+        
         "buttons": [
                    {extend: 'csv', title: 'adme'},
                    {extend: 'print', title: 'adme'}
