update inswx report 3

--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -1085,7 +1085,38 @@ $(function() {
 </tfoot>
 
 <tbody>
-<tr><td>Reference</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>https://www.ncbi.nlm.nih.gov/pubmed/25382374</td><td>https://www.ncbi.nlm.nih.gov/pubmed/17985865</td><td>http://pubs.acs.org/doi/abs/10.1021/ci990307l</td><td>https://jstagebeta.jst.go.jp/article/cpb1958/40/1/40_1_127/_article</td><td>http://silicos-it.be.s3-website-eu-west-1.amazonaws.com/software/filter-it/1.0.2/filter-it.html</td><td>Average result</td><td>https://www.ncbi.nlm.nih.gov/pubmed/15154768</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>https://www.ncbi.nlm.nih.gov/pubmed/22196228</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>http://silicos-it.be.s3-website-eu-west-1.amazonaws.com/software/filter-it/1.0.2/filter-it.html</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>https://www.ncbi.nlm.nih.gov/pubmed/27218427</td><td>https://www.ncbi.nlm.nih.gov/pubmed/27218427</td><td>https://www.ncbi.nlm.nih.gov/pubmed/22595422</td><td>https://www.ncbi.nlm.nih.gov/pubmed/28256516</td><td>https://www.ncbi.nlm.nih.gov/pubmed/28256516</td><td>https://www.ncbi.nlm.nih.gov/pubmed/28256516</td><td>https://www.ncbi.nlm.nih.gov/pubmed/28256516</td><td>https://www.ncbi.nlm.nih.gov/pubmed/28256516</td><td>https://www.ncbi.nlm.nih.gov/pubmed/1608900</td><td>https://www.ncbi.nlm.nih.gov/pubmed/11259830</td><td>https://www.ncbi.nlm.nih.gov/pubmed/10746014</td><td>https://www.ncbi.nlm.nih.gov/pubmed/12036371</td><td>https://www.ncbi.nlm.nih.gov/pubmed/11052792</td><td>https://www.ncbi.nlm.nih.gov/pubmed/11384230</td><td>https://www.ncbi.nlm.nih.gov/pubmed/15857122</td><td>https://www.ncbi.nlm.nih.gov/pubmed/20131845</td><td>https://www.ncbi.nlm.nih.gov/pubmed/18064617</td><td>https://www.ncbi.nlm.nih.gov/pubmed/10649345</td><td>https://www.ncbi.nlm.nih.gov/pubmed/25420000</td></tr>
+<tr><td>Reference</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/25382374' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/25382374</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/17985865' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/17985865</a></td>
+<td><a href='http://pubs.acs.org/doi/abs/10.1021/ci990307l' target='_blank'>http://pubs.acs.org/doi/abs/10.1021/ci990307l</a></td>
+<td><a href='https://jstagebeta.jst.go.jp/article/cpb1958/40/1/40_1_127/_article' target='_blank'>https://jstagebeta.jst.go.jp/article/cpb1958/40/1/40_1_127/_article</a></td>
+<td><a href='http://silicos-it.be.s3-website-eu-west-1.amazonaws.com/software/filter-it/1.0.2/filter-it.html' target='_blank'>http://silicos-it.be.s3-website-eu-west-1.amazonaws.com/software/filter-it/1.0.2/filter-it.html</a></td>
+<td>Average result</td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/15154768' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/15154768</a></td>
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/22196228' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/22196228</a></td>
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+<td><a href='http://silicos-it.be.s3-website-eu-west-1.amazonaws.com/software/filter-it/1.0.2/filter-it.html' target='_blank'>http://silicos-it.be.s3-website-eu-west-1.amazonaws.com/software/filter-it/1.0.2/filter-it.html</a></td>
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/27218427' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/27218427</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/27218427' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/27218427</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/22595422' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/22595422</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/28256516' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/28256516</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/28256516' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/28256516</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/28256516' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/28256516</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/28256516' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/28256516</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/28256516' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/28256516</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/1608900' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/1608900</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/11259830' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/11259830</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/10746014' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/10746014</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/12036371' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/12036371</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/11052792' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/11052792</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/11384230' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/11384230</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/15857122' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/15857122</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/20131845' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/20131845</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/18064617' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/18064617</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/10649345' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/10649345</a></td>
+<td><a href='https://www.ncbi.nlm.nih.gov/pubmed/25420000' target='_blank'>https://www.ncbi.nlm.nih.gov/pubmed/25420000</a></td></tr>
 
   <tr><td>INSWX217</td><td>MolPort-038-421-783</td><td>OCc1nnc(n1C1CC1)[C@@H]1C[C@H](C1)NC(=O)CCCn1ccnc1C</td><td>358.44</td><td>26</td><td>10</td><td>0.67</td><td>9</td><td>5</td><td>2</td><td>95.95</td><td>97.86</td><td>2.11</td><td>-0.6</td><td>1.24</td><td>0.48</td><td>1.19</td><td>0.88</td><td>-1.37</td><td>15.1</td><td>0.0422</td><td>Very soluble</td><td>-0.98</td><td>37.2</td><td>0.104</td><td>Very soluble</td><td>-3.2</td><td>0.226</td><td>0.00063</td><td>Soluble</td><td>High</td><td>No</td><td>Yes</td><td>No</td><td>No</td><td>No</td><td>No</td><td>No</td><td>-8.91</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0.55</td><td>0</td><td>0</td><td>2</td><td>4.02</td></tr>
  <tr><td>INSWX218</td><td>MolPort-030-063-316 PubChem-74249940</td><td>CCN(C(=O)c1cccc(c1)c1ccc(cc1)O)C[C@@H](COc1ccccc1)O</td><td>391.46</td><td>29</td><td>18</td><td>0.21</td><td>9</td><td>4</td><td>2</td><td>113.39</td><td>70</td><td>2.7</td><td>4.07</td><td>3.96</td><td>3.07</td><td>3.96</td><td>3.55</td><td>-4.7</td><td>0.00787</td><td>0.0000201</td><td>Moderately soluble</td><td>-5.24</td><td>0.00223</td><td>0.00000569</td><td>Moderately soluble</td><td>-6.89</td><td>0.0000509</td><td>0.00000013</td><td>Poorly soluble</td><td>High</td><td>Yes</td><td>Yes</td><td>No</td><td>Yes</td><td>Yes</td><td>Yes</td><td>Yes</td><td>-5.8</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0.55</td><td>0</td><td>0</td><td>3</td><td>3.2</td></tr>
