update inswx report 6

--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -54,7 +54,7 @@
             <!--<li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#input_data">Input data</a></li>
               <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#dl_analysis">Deep Learning</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#kinetic_analysis">Kinetic pathway modeling</a></li>-->
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#topmol">Hit Compounds</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#topmol">Top Compound Candidates</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#gene_analysis">Gene level analysis</a></li>
             <!--  <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#tf_analysis">Transcription Factor Analysis</a></li>-->
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#path_analysis">Pathway Analysis</a></li>
@@ -118,7 +118,7 @@
 
 <!-- ----------- Top molecules -->
  <hr/> 
-<h2 id='topmol'>Hit Compounds</h2>
+<h2 id='topmol'>Top Compound Candidates</h2>
 <hr/>
 <center>
 <button type="button"  class="btn btn-success btn-lg center" id='btn_show_topmol'>Show Data</button>
@@ -1575,7 +1575,7 @@ var top_featur = $("#tbl-top_featur").DataTable( {
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#conclusions">Discussion</a></li>
              -->
              
-             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#topmol">Hit Compounds</a></li>
+             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#topmol">Top Compound Candidates</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#gene_analysis">Gene level analysis</a></li>
             <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#tf_analysis">Transcription Factor Analysis</a></li>
             -->
