update inswx report

--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -159,6 +159,15 @@
      <br/> <a href='/media/report-portal/inswx-report/Structure3D_CID_56928031.sdf' target='_blank'>Download .sdf file </a>
  </td><td><a href='https://pubchem.ncbi.nlm.nih.gov/compound/56928031' target='_blank'>56928031</a></td>
  <td>&nbsp;</td><td>-6.1</td><td>35588.3271421</td><td>-10.2</td><td>36.40850353</td><td>-11.6</td><td>3.468897381</td><td>-11.3</td><td>5.74089501</td><td>-8.6</td><td>534.6541884</td><td>437.5</td><td>3.79</td><td>69.72</td></tr>
+
+ <tr><td>INSWX311</td><td>&nbsp;</td><td>
+ <img src='/media/report-portal/inswx-report/INSWX311.png' />
+     
+     <!-- <br/> <a href='/media/report-portal/inswx-report/Structure3D_CID_56928031.sdf' target='_blank'>Download .sdf file </a>-->
+ </td><td><a href='https://pubchem.ncbi.nlm.nih.gov/compound/11305931' target='_blank'>11305931</a></td>
+ <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+
+
 </tbody>
 </table>
 
@@ -659,7 +668,14 @@
 
 <img src='/media/report-portal/inswx-report/pic8.png'style='width:70%; margin: 0 auto' />
 <h4>ACC2 in complex with INSWX235: AP-1 is represented as hydrophobic surface: blue color is hydrophilic area, orange color is hydrophobic area.</h4>
+<hr/>
+<table border="0">
+  <tr>
+    <td width='50%'><img src='/media/report-portal/inswx-report/struc_new1.png' style='width:500px; margin: 0 auto' /></td>
+    <td width='50%'><img src='/media/report-portal/inswx-report/struct_new_2.jpg' style='width:500px; margin: 0 auto' /></td>
+  </tr>
 
+</table>
 
 
 </center>
